Fix bug for firefox loader not using display none add visibility hidden for resolve

--- a/src/sass/pages/_homepage.scss
+++ b/src/sass/pages/_homepage.scss
@@ -73,6 +73,7 @@
     margin-bottom: 1.25rem;
     @include desktop-only {
       padding: 1.79rem 2.38rem;
+      width: 100%;
     }
 
     &::before {
