--- a/src/sass/utils/_keyframes.scss
+++ b/src/sass/utils/_keyframes.scss
@@ -57,6 +57,7 @@
   100% {
     opacity: 0;
     display: none;
+    visibility: hidden;
   }
 }
 
